--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,4 @@
+@use './components/nav-desktop';
 /*******************************************************************************
   BOOTSTRAP
 *******************************************************************************/
