--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,5 @@
 @use './components/nav-desktop';
+@use './components/nav-mobile';
 /*******************************************************************************
   BOOTSTRAP
 *******************************************************************************/
