Add <HeroHeader /> component

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,6 @@
 @use './components/nav-desktop';
 @use './components/nav-mobile';
+@use './components/hero-header';
 /*******************************************************************************
   BOOTSTRAP
 *******************************************************************************/
