Add <CoreValues /> component

--- a/styles/components/hero-header.scss
+++ b/styles/components/hero-header.scss
@@ -1,5 +1,6 @@
 .hero-header-wrapper {
-  padding-block: 4.375em;
+  padding-block-start: 4.375em;
+  padding-block-end: 7em;
   background-image: url('../../public/images/ferran-fusalba-99194.jpg');
   background-size: cover;
   background-position: bottom;
