--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,7 @@
 @use './components/nav-desktop';
 @use './components/nav-mobile';
 @use './components/hero-header';
+@use './components/core-values';
 /*******************************************************************************
   BOOTSTRAP
 *******************************************************************************/
