--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,7 +1,10 @@
+@use 'utilities';
+@use 'global';
 @use './components/nav-desktop';
 @use './components/nav-mobile';
 @use './components/hero-header';
 @use './components/core-values';
+@use './components/steps';
 /*******************************************************************************
   BOOTSTRAP
 *******************************************************************************/
