--- a/styles/index.scss
+++ b/styles/index.scss
@@ -25,3 +25,4 @@
 @import './components/core-values';
 @import './components/steps';
 @import './components/rates-cta';
+@import './components/brands';
