--- a/styles/custom-bootstrap-config.scss
+++ b/styles/custom-bootstrap-config.scss
@@ -5,6 +5,11 @@ $theme-colors: (
   'warm-grey': #9b9b9b,
   'cool-grey': #a7acae,
   'light-gray': #e5e5e5,
+  'whatsapp': #81ce59,
+  'facebook': #3a589b,
+  'twitter': #598dca,
+  'linkedin': #007ab9,
+  'youtube': #cf3427,
 );
 
 $font-family-base: Lato;
