--- a/styles/components/rates-cta.scss
+++ b/styles/components/rates-cta.scss
@@ -4,8 +4,15 @@
   background-position: bottom;
   background-color: var(--bs-primary);
   color: var(--bs-white);
-  padding-block: 4.1875rem;
-  margin-top: -4rem;
+  padding-block: 3rem;
+
+  @media (min-width: 65rem) {
+    --padding-bottom: 4.1875rem;
+    --padding-top: calc(var(--padding-bottom) * 2);
+    padding-top: var(--padding-top);
+    padding-bottom: var(--padding-bottom);
+    margin-top: calc(-7rem - var(--padding-top) / 2);
+  }
 }
 
 .rates-cta {
