--- a/styles/components/steps.scss
+++ b/styles/components/steps.scss
@@ -76,6 +76,11 @@
 
   @media (min-width: 65rem) {
     row-gap: 0.5rem;
+
+    &[data-active] {
+      background-color: var(--bs-white);
+      border-bottom: 0.5rem solid var(--bs-primary);
+    }
   }
 
   &::before {
@@ -89,10 +94,6 @@
     background-color: var(--bs-primary);
     color: var(--bs-white);
     border-radius: 100vh;
-  }
-
-  &[data-active] {
-    background-color: var(--bs-white);
   }
 
   &__header__heading {
@@ -112,16 +113,6 @@
     font-size: 0.875em;
     line-height: 1.3;
     color: var(--bs-gray-600);
-  }
-
-  &__hr {
-    opacity: 1;
-    margin: 0;
-    background-color: transparent;
-  }
-
-  &[data-active] &__hr {
-    background-color: var(--bs-primary);
   }
 
   &__thumbnail {
