Refactor <RatesCTA /> into <CallToAction />
Use the new <CallToAction /> to show two ctas

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -24,6 +24,8 @@
 @import './components/hero-header';
 @import './components/core-values';
 @import './components/steps';
-@import './components/rates-cta';
+@import './components/call-to-action';
 @import './components/brands';
 @import './components/footer';
+
+@import './home-ctas';
