--- a/styles/components/call-to-action.scss
+++ b/styles/components/call-to-action.scss
@@ -1,21 +1,15 @@
-.rates-cta-wrapper {
-  background-image: url('../../public/images/cta.jpg');
+.call-to-action-wrapper {
+  --padding-bottom: 4.1875rem;
+  --padding-top: var(--padding-bottom);
   background-size: cover;
   background-position: bottom;
   background-color: var(--bs-primary);
   color: var(--bs-white);
-  padding-block: 3rem;
-
-  @media (min-width: 65rem) {
-    --padding-bottom: 4.1875rem;
-    --padding-top: calc(var(--padding-bottom) * 2);
-    padding-top: var(--padding-top);
-    padding-bottom: var(--padding-bottom);
-    margin-top: calc(-7rem - var(--padding-top) / 2);
-  }
+  padding-top: var(--padding-top);
+  padding-bottom: var(--padding-bottom);
 }
 
-.rates-cta {
+.call-to-action {
   display: grid;
   justify-items: center;
   text-align: center;
