Improve <Steps /> component with reducers

--- a/styles/components/steps.scss
+++ b/styles/components/steps.scss
@@ -73,6 +73,7 @@
     / auto 1fr;
   column-gap: 1rem;
   align-items: center;
+  border-bottom: 0.5rem solid transparent;
 
   @media (min-width: 65rem) {
     row-gap: 0.5rem;
@@ -83,7 +84,7 @@
 
     &[data-active] {
       background-color: var(--bs-white);
-      border-bottom: 0.5rem solid var(--bs-primary);
+      border-bottom-color: var(--bs-primary);
     }
   }
 
